--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 :root {
-    --main-color: #a435f0;
     --second-color: #0b2441;
-    --secondary-color: #007bff;
+    --main-color: #007bff;
     --red: #e74c3c;
     --orange: #f39c12;
     --white: #fff;
@@ -25,19 +24,6 @@
     color: #fff;
 }
 
-*::-webkit-scrollbar {
-    height: .5rem;
-    width: 1rem;
-}
-
-*::-webkit-scrollbar-track {
-    background-color: transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-    background-color: var(--main-color);
-}
-
 html{
     font-size: 62.5%;
     overflow: scroll;
@@ -56,6 +42,11 @@ body {
     display: flex;
     text-align: center;
     justify-content: flex-start;
+    position: sticky;
+    z-index: 1;
+    position: fixed;
+    width: 100%; 
+    padding: 1rem; 
 }
 
 .header .logo {
@@ -148,8 +139,8 @@ body {
 
 .home-page .intro{
     position: relative;
-    margin: 1rem;
-    padding: 1rem;
+    padding: 2rem;
+    padding-top: 6.4rem;
 }
 
 .home-page .intro h1 {
@@ -206,8 +197,8 @@ body {
     width: 100%;
     justify-content: space-around;
     gap: 1rem;
-    flex: 1;
     margin-top: -5rem;
+    overflow: hidden;
 }
 
 .home-page .intro .illustrations .homeb-img{
@@ -224,7 +215,8 @@ body {
 .home-page .stats{
     background-color: var(--second-color);
     color: var(--white);
-    padding: 1rem;
+    padding: .5rem;
+    overflow: hidden;
 }
 
 .home-page .stats h2{
@@ -236,19 +228,21 @@ body {
 
 .home-page .stats .companies{
     display: flex;
-    gap: 2rem;
-    width: 100%;
-    justify-content: center;
+    gap: 1rem;
+    justify-content: space-evenly;
     align-items: center;
-    padding: 1.5rem;
+    padding: 1rem;
+    width: 220%; 
+    height: 100%;
+    animation: marquee 50s linear infinite; 
+
 }
 
 .home-page .stats .companies img{
     height: 4rem;
-    gap: 1.5rem;
     overflow: auto;
     align-items: center;
-    justify-content: center;
+    flex-wrap: nowrap;
 }
 
 
@@ -263,12 +257,47 @@ body {
     justify-content: center;
     align-items: center;
 }
+
 .home-page .join-us-left{
     width: 50%;   
+    display: flex;
+    align-items: center;
+    text-align: left;
+    justify-content: flex-start;
+    flex-direction: column;
 }
+
+.home-page .join-us-left h1{
+    font-size: 8rem;   
+    margin: auto;
+    width: 100%;
+}
+
 .home-page .join-us-right{
     width: 50%;
 }
 .home-page .join-us-right img{
     height: 50rem;
+}
+
+.home-page .background{
+    width: 100%;
+    background-image: url(./image/images.png);
+}
+
+.marquee{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    flex-wrap: nowrap;
+}
+
+@keyframes marquee {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-50%);
+    }
 }
