--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 }
 .header {
     background-color: #fff;
-    padding: 10px 0;
+    padding: 1rem 0;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     display: flex;
     text-align: center;
@@ -73,8 +73,8 @@ body {
     display: flex;
     align-items: center;
     border: 1px solid #ccc;
-    border-radius: 25px;
-    padding: 5px 10px;
+    border-radius: 3rem;
+    padding: .5rem 1rem;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
@@ -82,7 +82,7 @@ body {
     border: none;
     outline: none;
     flex: 1;
-    padding: 10px;
+    padding: 1rem;
     font-size: 1.5rem;
     border-radius: 3rem;
 }
@@ -92,8 +92,8 @@ body {
     outline: none;
     color: var(--white);
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 5rem;
+    height: 5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -101,8 +101,8 @@ body {
 }
 
 .header .logo .search-form button img {
-    width: 20px;
-    height: 20px;
+    width: 2.5rem;
+    height: 2.5rem;
 }
 
 .header .nav{
@@ -150,11 +150,11 @@ body {
 }
 
 .home-page .intro h1 {
-    margin-bottom: 20px;
-    font-size: 36px;
+    margin-bottom: 2.5rem;
+    font-size: 4rem;
     color: var(--second-color);
     font-weight: 900;
-    margin: 36px;
+    margin: 4rem;
     text-align: center;
 }
 
@@ -163,16 +163,16 @@ body {
     border-radius: 3rem;
     display: flex;
     align-items: center;
-    font-size: 20px;
-    height: 64px;
+    font-size: 2.5rem;
+    height: 8rem;
     margin: auto;
     text-align: center;
-    width: 748px;
+    width: 50%;
 }
 
 .home-page .intro .home-search-form input::placeholder {
     font-size: 2.5rem; 
-    line-height: 50px; 
+    line-height: 6rem; 
     color: #888; 
   }
 
@@ -257,6 +257,7 @@ body {
 /*cards section*/
 .background {
     background-image: url(./image/bgnew.png);
+    width: 100%;
 }
 
 .background h1{
@@ -268,12 +269,9 @@ body {
 
 .card-container{
     justify-content: center;
-    margin: auto;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    width: 100%;
-    gap: 5rem;
+    gap: 6rem;
     padding: 5rem;
     flex-wrap: wrap; /* Ensure the cards wrap to the next line */
 }
@@ -282,15 +280,15 @@ body {
     background-color: white;
     border-radius: 3rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 20rem;
-    height: 18rem;
+    width: 23rem;
+    height: 20rem;
     display: flex;
     flex-direction: column; /* Ensure the content is stacked vertically */
     align-items: center; /* Center the content horizontally */
     justify-content: center; /* Center the content vertically */
     text-align: center;
     cursor: pointer;
-    padding: 20px;
+    padding: 2.5rem;
     transition: .2s linear;
 }
 
@@ -301,25 +299,25 @@ body {
 .card-icon {
     background-color: var(--main-color);
     color: white;
-    width: 50px;
-    height: 50px;
+    width: 6rem;
+    height: 6rem;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 auto 10px auto;
-    font-size: 24px;
+    margin: 0 auto 1rem auto;
+    font-size: 3rem;
 }
 
 .card-content h3 {
-    margin: 10px 0;
-    font-size: 20px;
+    margin: 1rem 0;
+    font-size: 1.5rem;
     color: #333;
 }
 
 .card-content p {
     margin: 0;
-    font-size: 16px;
+    font-size: 2rem;
     color: #777;
     display: flex;
     justify-content: center;
@@ -327,7 +325,7 @@ body {
 }
 
 .card-content p i {
-    margin-left: 5px;
+    margin-left: .5rem;
 }
 
 .marquee{
@@ -356,8 +354,8 @@ body {
 .careers h1{
     font-size: 3rem;
     color: white;
-    padding: 3rem;
-    padding-top: 4rem;
+    padding: 2rem;
+    padding-top: 5rem;
 }
 
 .box-container {
@@ -391,6 +389,7 @@ body {
 
 .box img{
     height: 20rem;
+    width: 100%;
     object-fit: contain;
 }
 
@@ -402,7 +401,7 @@ body {
 }
 
 .box-content {
-    margin-top: 10px;
+    margin-top: 1rem;
 }
 
 .box-content p {
@@ -414,7 +413,7 @@ body {
     text-decoration: none;
     color: #007BFF;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 1rem;
     display: inline-block;
 }
 
@@ -427,50 +426,52 @@ body {
 .join-us {
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding: 2.5rem;
+    width: 100%;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 .join-us-left {
-    margin-right: 20px;
     text-align: start;
-    margin-left: 5rem;
-    width: 570px;
+    flex: 1;
+    width: 70rem;
 }
 .join-us-left h1 {
-    font-size: 8rem;
+
+    width: 100%;
     color: var(--main-color);
 }
 
 .join-us-left p {
     font-size: 2rem;
+    padding: 2rem 0;
     color: var(--black);
 }
 
 .join-us-left p {
-    font-size: 18px;
-    margin: 20px 0;
+    font-size: 2rem;
+    margin: 2.5rem 0;
 }
 
 .join-us-right {
     position: relative;
-    right: 0;
 }
 .join-us-right img {
-    height: 50rem;
+    height: 5rem;
+;
 }
 
 footer {
     background-color: var(--main-color);
     color: #fff;
-    padding: 40px 0;
+    padding: 5rem 0;
     position: relative;
     width: 100%;
 }
 
 .footer-container {
-    max-width: 1200px;
     margin: 0 auto;
-    padding: 0 20px;
+    width: 100%;
+    padding: 0 2.5rem;
 }
 
 .footer-row {
@@ -481,19 +482,20 @@ footer {
 
 .footer-column {
     flex: 1;
-    min-width: 200px;
-    margin: 20px;
+    margin: 2.5rem;
 }
 
 .footer-column h3 {
-    margin-bottom: 20px;
-    font-size: 18px;
+    margin-bottom: 2.5rem;
+    font-size: 2.2rem;
+    width: 100%;
     text-transform: uppercase;
 }
 
 .footer-column p, .footer-column ul, .footer-column a {
     color: #bbb;
-    font-size: 14px;
+    width: 100%;
+    font-size: 1.8rem;
     text-decoration: none;
 }
 
@@ -503,7 +505,7 @@ footer {
 }
 
 .footer-column ul li {
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
 }
 
 .footer-column ul li a:hover {
@@ -512,12 +514,13 @@ footer {
 
 .social-icons {
     display: flex;
+    justify-content: center;
 }
 
 .social-icons a {
     color: #bbb;
-    font-size: 18px;
-    margin-right: 15px;
+    font-size: 1.8rem;
+    margin-right: 2rem;
     transition: color 0.3s;
 }
 
@@ -527,23 +530,13 @@ footer {
 
 .footer-bottom {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 2.5rem;
 }
 
 .footer-bottom p {
     margin: 0;
-    font-size: 14px;
-}
-
-@media (max-width: 768px) {
-    .footer-row {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .footer-column {
-        margin: 10px 0;
-    }
+    font-size: 2rem;
+    width: 100%;
 }
 
 .course{
@@ -593,10 +586,84 @@ footer {
     margin-top: 2rem;
     text-align: center;
     display: block;
-    border-radius: 5px;
+    border-radius: .5rem;
     cursor: pointer;
 }
 
 .course img{
     width: 90%;
+}
+
+.buttons {
+    margin-top: 2.5rem;
+}
+.buttons a {
+    text-decoration: none;
+    padding: 1rem 2.5rem;
+    border-radius: .5rem;
+    font-size: 2rem;
+    margin-right: 1rem;
+}
+
+.buttons .join-free {
+    background-color: #0070f3;
+    border-radius: 3rem;
+    color: white;
+    padding: 1rem 2rem;
+}
+
+.buttons .business {
+    border: 1px solid #0070f3;
+    color: #0070f3;
+    border-radius: 3rem;
+    padding: 1rem 2rem;
+}
+
+.responsive {
+    width: 100%;
+    height: auto;
+  }
+
+@media (max-width:1200px){
+
+    body{
+        padding-left: 0;
+    }
+
+
+
+
+}
+
+
+@media (max-width:991px){
+    html{
+        font-size: 55%;
+    }
+}
+
+@media (max-width: 768px) {
+    
+    .header .flex .search-form {
+        position: absolute;
+        
+        clip-path: polygon(0 0, 100% 0, 0 0);
+        transition: .2s linear;
+    }
+    .footer-row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-column {
+        margin: 1rem 0;
+    }
+}
+
+@media (max-width: 450px) {
+    html{
+        font-size: 50%;
+    }
+
+    
 }
