--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
 }
 
 .header .logo a{
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 900;
     padding: 0 2rem;
     text-align: center;
@@ -74,7 +74,7 @@ body {
     align-items: center;
     border: 1px solid #ccc;
     border-radius: 3rem;
-    padding: .5rem 1rem;
+    padding: .5rem;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
@@ -92,8 +92,8 @@ body {
     outline: none;
     color: var(--white);
     border-radius: 50%;
-    width: 5rem;
-    height: 5rem;
+    width: 4rem;
+    height: 4rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -143,6 +143,42 @@ body {
     color: var(--yellow);
 }
 
+.header .profilei {
+    position: absolute;
+    top: 120%; 
+    right: 2rem;
+    background-color: var(--white);
+    padding: 2rem;
+    text-align: center;
+    width: 30rem;
+    transform: scale(0);
+    transform-origin: top right;
+    transition: .2s linear;
+}
+
+.header .profilei.active {
+    transform: scale(1);
+}
+
+.header .profilei img {
+    height: 10rem;
+    width: 10rem;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: .5rem;
+}
+
+.header .profilei h3 {
+    font-size: 2rem;
+    color: var(--black);
+}
+
+.header .profilei span {
+    color: var(--light-color);
+    font-size: 1.6rem;
+}
+
+
 .home-page .intro{
     position: relative;
     padding: 2.3rem;
@@ -150,11 +186,12 @@ body {
 }
 
 .home-page .intro h1 {
-    margin-bottom: 2.5rem;
+    margin-bottom: 3rem;
     font-size: 4rem;
-    color: var(--second-color);
+    padding-top: 5rem;
+    padding-bottom: 1.5rem;
+    color: var(--main-color);
     font-weight: 900;
-    margin: 4rem;
     text-align: center;
 }
 
@@ -164,7 +201,7 @@ body {
     display: flex;
     align-items: center;
     font-size: 2.5rem;
-    height: 8rem;
+    height: 6rem;
     margin: auto;
     text-align: center;
     width: 50%;
@@ -200,22 +237,25 @@ body {
     position: relative;
     display: flex;
     align-items: flex-end;
-    width: 100%;
+    width: auto;
     justify-content: space-around;
     gap: 1rem;
-    margin-top: -5rem;
+    margin-top: -4rem;
     overflow: hidden;
 }
 
 .home-page .intro .illustrations .homeb-img{
+    width: auto;
     display: flex;
-    justify-content: space-around;
-    height: 33rem;
+    position: relative;
+    height: 30rem;
 }
 
 .home-page .intro .illustrations .home-img{
+    position: relative;
+    width: auto;
     display: flex;
-    height: 23rem;
+    height: 25rem;
 }
 
 .home-page .stats{
@@ -347,7 +387,7 @@ body {
 
 /*boxes */
 .careers{
-    background-image: url(./image/gg1.jpg);
+    background-image: url(./image/bg2.png);
     padding: 3rem;
 }
 
@@ -426,38 +466,32 @@ body {
 .join-us {
     display: flex;
     align-items: center;
-    padding: 2.5rem;
     width: 100%;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    padding: 0 4rem;
 }
 .join-us-left {
     text-align: start;
     flex: 1;
-    width: 70rem;
+    position: relative;
+    padding-left: 7%;
 }
 .join-us-left h1 {
-
-    width: 100%;
+    font-size: 6rem;
     color: var(--main-color);
 }
 
 .join-us-left p {
     font-size: 2rem;
-    padding: 2rem 0;
     color: var(--black);
-}
-
-.join-us-left p {
-    font-size: 2rem;
-    margin: 2.5rem 0;
 }
 
 .join-us-right {
     position: relative;
+    padding: 0 4rem;
 }
 .join-us-right img {
-    height: 5rem;
-;
+    height: 50rem;
 }
 
 footer {
@@ -470,8 +504,8 @@ footer {
 
 .footer-container {
     margin: 0 auto;
+    padding: 0 20px;
     width: 100%;
-    padding: 0 2.5rem;
 }
 
 .footer-row {
@@ -488,13 +522,11 @@ footer {
 .footer-column h3 {
     margin-bottom: 2.5rem;
     font-size: 2.2rem;
-    width: 100%;
     text-transform: uppercase;
 }
 
 .footer-column p, .footer-column ul, .footer-column a {
     color: #bbb;
-    width: 100%;
     font-size: 1.8rem;
     text-decoration: none;
 }
@@ -510,6 +542,31 @@ footer {
 
 .footer-column ul li a:hover {
     color: #fff;
+}
+
+.social-icons {
+    display: flex;
+}
+
+.social-icons a {
+    color: #bbb;
+    font-size: 18px;
+    margin-right: 15px;
+    transition: color 0.3s;
+}
+
+.social-icons a:hover {
+    color: #fff;
+}
+
+.footer-bottom {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.footer-bottom p {
+    margin: 0;
+    font-size: 14px;
 }
 
 .social-icons {
@@ -623,6 +680,71 @@ footer {
     width: 100%;
     height: auto;
   }
+
+/*about section*/
+.about .row{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+}
+
+.about .row .image{
+    flex: 1 1 40rem;    
+}
+
+.about .row .image img{
+    width: 100%; 
+    height: 50rem;   
+}
+
+.about .row .content{
+    flex: 1 1 40rem;    
+    text-align: center;
+}
+
+.about .row .content h3{
+    font-size: 2.5rem;
+    color: var(--black);    
+}
+
+.about .row .content p{
+    line-height: 2;
+    font-size: 1.7rem;
+    color: var(--light-color);
+    padding: 1rem 0;
+}
+
+.about .box-container{
+    margin-top: 3rem;
+    display: flex;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+}
+
+.about .box-container .box{
+    flex: 1 1 20rem;                    /*important*/
+    display: flex;
+    align-items: center;
+    background-color: var(--white);
+    border-radius: .5rem;
+    padding: 2rem;
+    gap: 2rem;
+}
+
+.about .box-container .box i{
+    font-size: 2.5rem;
+    color: var(--main-color);
+}
+
+.about .box-container .box span{
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
+
+
+
+
 
 @media (max-width:1200px){
 
