--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
     --black: #2c3e50;
     --light-color: #636363;
     --light-bg: #f5f7f8;
-    --border:.1rem solid rgba(0,0,0,.2);
+    --border: .1rem solid rgba(0, 0, 0, .2);
 }
+
 * {
     font-family: "Roboto", sans-serif;
     margin: 0;
@@ -37,17 +38,18 @@ body {
     background-color: var(--white);
     text-align: center;
 }
+
 .header {
     background-color: #fff;
     padding: .5rem 0;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     text-align: center;
     justify-content: flex-start;
-    position: sticky;
-    z-index: 1;
-    width: 100%; 
-    padding: .5rem; 
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+    padding: 1rem;
 }
 
 .header .logo {
@@ -56,8 +58,8 @@ body {
     justify-content: center;
 }
 
-.header .logo a{
-    font-size: 2rem;
+.header .logo a {
+    font-size: 1.7rem;
     font-weight: 900;
     padding: 0 1rem;
     text-align: center;
@@ -74,17 +76,19 @@ body {
     border-radius: 3rem;
     padding: .5rem;
     background-color: var(--white);
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
 .header .logo .search-form input {
     border: none;
     outline: none;
     flex: 1;
-    padding: .5rem;
+    padding: 0 .5rem;
     font-size: 1rem;
     border-radius: 3rem;
 }
-.header .logo .search-form button{
+
+.header .logo .search-form button {
     background-color: var(--main-color);
     border: none;
     outline: none;
@@ -103,26 +107,28 @@ body {
     height: 1.5rem;
 }
 
-.header .nav{
+.header .nav {
     display: flex;
     align-items: center;
     justify-content: center;
     color: var(--main-color);
-    font-size: 1rem;
 }
 
-.header .nav a{
-    font-size: 1rem;
+.header .nav span{
+    font-size: 1.2rem;
+}
+.header .nav a {
+    font-size: 1.3rem;
     padding: 0 1rem;
     color: var(--light-color);
     transition: .3s linear;
 }
 
-.header .nav a:hover{
+.header .nav a:hover {
     color: var(--yellow);
 }
 
-.header .profile{
+.header .profile {
     display: flex;
     align-items: center;
     position: relative;
@@ -130,20 +136,20 @@ body {
     justify-content: flex-end;
 }
 
-.header .profile a{
+.header .profile a {
     font-size: 1rem;
     padding: 0 1rem;
     color: var(--light-color);
     transition: .3s linear;
 }
 
-.header .profile a:hover{
+.header .profile a:hover {
     color: var(--yellow);
 }
 
 .header .profilei {
     position: absolute;
-    top: 120%; 
+    top: 120%;
     right: 1rem;
     background-color: var(--white);
     padding: 1rem;
@@ -177,25 +183,25 @@ body {
 }
 
 
-.home-page .intro{
+.home-page .intro {
     position: relative;
-    padding-top: 3.5rem;
     padding-bottom: 1rem;
 }
 
 .home-page .intro h1 {
     margin-bottom: 1.5rem;
     font-size: 2rem;
-    padding-top: 2.5rem;
+    padding-top: 7rem;
     padding-bottom: 1rem;
     color: var(--main-color);
     font-weight: 900;
     text-align: center;
 }
 
-.home-page .intro .home-search-form{
+.home-page .intro .home-search-form {
     border: 1px solid #b3bdc0;
     border-radius: 1.5rem;
+    flex-wrap: nowrap;
     display: flex;
     align-items: center;
     font-size: 2rem;
@@ -206,23 +212,24 @@ body {
 }
 
 .home-page .intro .home-search-form input::placeholder {
-    font-size: 1.5rem; 
-    line-height: 3rem; 
-    color: #888; 
-  }
+    font-size: 1.5rem;
+    line-height: 3rem;
+    color: #888;
+}
 
-.home-page .intro .home-search-form button{
+.home-page .intro .home-search-form button {
     background-color: #fff;
     color: #757575;
-    font-size: 1rem;
-    padding: 1rem;
+    font-size: 1.5rem;
+    padding: .5rem;
+    border-radius: 1rem;
     margin-right: .5rem;
     align-items: center;
     justify-content: center;
     cursor: pointer;
 }
 
-.home-page .intro input{
+.home-page .intro input {
     display: flex;
     font-size: 1.5rem;
     margin: auto;
@@ -231,86 +238,94 @@ body {
     width: 100%;
 }
 
-.home-page .intro .illustrations{
+.home-page .intro .illustrations {
     position: relative;
     display: flex;
     align-items: flex-end;
+    margin-top: -2rem;
     width: auto;
+    z-index: 1;
     justify-content: space-around;
     gap: 1rem;
+    padding-bottom: 1rem;
     overflow: hidden;
 }
 
-.home-page .intro .illustrations .homeb-img{
+.home-page .intro .illustrations .homeb-img {
     width: auto;
     display: flex;
     position: relative;
-    height: 15rem;
+    height: 20rem;
 }
 
-.home-page .intro .illustrations .home-img{
+.home-page .intro .illustrations .home-img {
     position: relative;
     width: auto;
     display: flex;
-    height: 15rem;
+    height: 17rem;
 }
 
-.home-page .stats{
+.home-page .stats {
     background-color: var(--second-color);
     color: var(--white);
     padding: .5rem;
     overflow: hidden;
 }
 
-.home-page .stats h2{
-    font-size: 1rem;
+.home-page .stats h2 {
+    font-size: 1.4rem;
     text-align: center;
-    padding: 1rem 0;
+    padding: 1.2rem 0;
     justify-content: center;
 }
 
-.home-page .stats .companies{
+.home-page .stats .companies {
     display: flex;
     gap: 1rem;
     justify-content: space-evenly;
     align-items: center;
     padding: 1rem;
-    width: 220%; 
+    width: 220%;
     height: 100%;
-    animation: marquee 60s linear infinite; 
+    animation: marquee 60s linear infinite;
 
 }
 
-.home-page .stats span{
+.home-page .stats span {
     color: var(--yellow);
 }
 
-.home-page .stats .companies img{
+.home-page .stats .companies img {
     height: 2rem;
     overflow: auto;
     align-items: center;
     flex-wrap: nowrap;
 }
+
 /*cards section*/
 .background {
     background-image: url(./image/bgnew.png);
     width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
-.background h1{
+.background h1 {
     font-size: 1.5rem;
     color: white;
     padding: 1rem;
     padding-top: 2.5rem;
 }
 
-.card-container{
+.card-container {
     justify-content: center;
     display: flex;
+    max-width: 75rem;
     align-items: center;
     gap: 1.5rem;
     padding: 2rem;
-    flex-wrap: wrap; /* Ensure the cards wrap to the next line */
+    flex-wrap: wrap;
+    /* Ensure the cards wrap to the next line */
 }
 
 .card {
@@ -320,9 +335,12 @@ body {
     width: 13rem;
     height: 12rem;
     display: flex;
-    flex-direction: column; /* Ensure the content is stacked vertically */
-    align-items: center; /* Center the content horizontally */
-    justify-content: center; /* Center the content vertically */
+    flex-direction: column;
+    /* Ensure the content is stacked vertically */
+    align-items: center;
+    /* Center the content horizontally */
+    justify-content: center;
+    /* Center the content vertically */
     text-align: center;
     cursor: pointer;
     padding: 1rem;
@@ -365,7 +383,7 @@ body {
     margin-left: .5rem;
 }
 
-.marquee{
+.marquee {
     position: relative;
     width: 100%;
     height: 100vh;
@@ -377,22 +395,22 @@ body {
     from {
         transform: translateX(0);
     }
+
     to {
         transform: translateX(-50%);
     }
 }
 
 /*boxes */
-.careers{
+.careers {
     background-image: url(./image/bg2.png);
     padding: 1.5rem;
 }
 
-.careers h1{
+.careers h1 {
     font-size: 1.5rem;
     color: white;
-    padding: 1rem;
-    padding-top: 2.5rem;
+    padding: 1.5rem;
 }
 
 .box-container {
@@ -415,16 +433,16 @@ body {
     transition: .2s linear;
 }
 
-.box:hover{
+.box:hover {
     transform: scale(1.09);
 }
 
-.box h3{
+.box h3 {
     font-size: 1rem;
     padding-bottom: 1rem;
 }
 
-.box img{
+.box img {
     height: 10rem;
     width: 100%;
     object-fit: contain;
@@ -464,20 +482,23 @@ body {
 .join-us {
     display: flex;
     background-color: var(--light-bg);
+    flex-wrap: nowrap;
     align-items: center;
     width: 100%;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    padding: 0 2rem;
+    padding: 2rem 2rem;
 }
+
 .join-us-left {
     text-align: start;
     position: relative;
     padding-left: 7%;
 }
-.join-us-left h1{
+
+.join-us-left h1 {
     font-size: 3rem;
     color: var(--main-color);
-    padding: 1rem;
+    padding: 1rem 0;
     padding-top: 2.5rem;
 }
 
@@ -490,8 +511,9 @@ body {
     position: relative;
     padding: 0 2rem;
 }
+
 .join-us-right img {
-    width: 25rem;
+    width: 40rem;
 }
 
 footer {
@@ -505,20 +527,19 @@ footer {
 .footer-container {
     margin: 0 auto;
     padding: 0 20px;
-    max-width: 70rem;
+    max-width: 74rem;
     width: 100%;
 }
 
 .footer-row {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .footer-column {
     flex: 1;
-    margin: 1rem;
-    min-width: 15rem;
+    min-width: min-content;
 }
 
 .footer-column h3 {
@@ -527,9 +548,11 @@ footer {
     text-transform: uppercase;
 }
 
-.footer-column p, .footer-column ul, .footer-column a {
+.footer-column p,
+.footer-column ul,
+.footer-column a {
     color: #bbb;
-    font-size: 1rem;
+    font-size: 1.2rem;
     text-decoration: none;
 }
 
@@ -584,31 +607,32 @@ footer {
 
 .footer-bottom p {
     margin: 0;
-    font-size: 1rem;
+    font-size: 1.5rem;
+    padding: 1rem;
     width: 100%;
 }
 
-.course{
+.course {
     padding-top: 5rem;
 }
 
 
-.course .box-container{
+.course .box-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(15rem,1fr));
-    gap:1rem;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    gap: 1rem;
     align-items: flex-start;
     padding-bottom: 2.5rem;
     justify-content: center;
 }
 
-.course .box-container .box{
+.course .box-container .box {
     border-radius: 1rem;
     background-color: var(--white);
     padding: 1rem;
 }
 
-.heading{
+.heading {
     padding-bottom: 1rem;
     border-bottom: var(--border);
     font-size: 1.5rem;
@@ -617,21 +641,21 @@ footer {
     margin-bottom: 1rem;
 }
 
-.course .box-container .box .thumb{
+.course .box-container .box .thumb {
     width: 100%;
     border-radius: 1rem;
     height: 10rem;
     object-fit: cover;
 }
 
-.course .box-container .box .title{
+.course .box-container .box .title {
     font-size: 1rem;
     color: var(--black);
     margin-top: .5rem;
     padding: .5rem 0;
 }
 
-.course .more-btn{
+.course .more-btn {
     margin-top: 1rem;
     text-align: center;
     display: block;
@@ -639,7 +663,7 @@ footer {
     cursor: pointer;
 }
 
-.course img{
+.course img {
     width: 90%;
 }
 
@@ -650,6 +674,7 @@ footer {
     justify-content: flex-start;
     gap: .5rem;
 }
+
 .buttons a {
     text-decoration: none;
     padding: 1rem 1.5rem;
@@ -675,51 +700,52 @@ footer {
 .responsive {
     width: 100%;
     height: auto;
-  }
+}
 
 /*about section*/
-.about .row{
+.about .row {
     display: flex;
     align-items: center;
     gap: 1rem;
     flex-wrap: wrap;
 }
 
-.about .row .image{
-    flex: 1 1 20rem;    
+.about .row .image {
+    flex: 1 1 20rem;
 }
 
-.about .row .image img{
-    width: 100%; 
-    height: 25rem;   
+.about .row .image img {
+    width: 100%;
+    height: 25rem;
 }
 
-.about .row .content{
-    flex: 1 1 20rem;    
+.about .row .content {
+    flex: 1 1 20rem;
     text-align: center;
 }
 
-.about .row .content h3{
+.about .row .content h3 {
     font-size: 1.5rem;
-    color: var(--black);    
+    color: var(--black);
 }
 
-.about .row .content p{
+.about .row .content p {
     line-height: 2;
     font-size: 1rem;
     color: var(--light-color);
     padding: .5rem 0;
 }
 
-.about .box-container{
+.about .box-container {
     margin-top: 1.5rem;
     display: flex;
     gap: 1rem;
     flex-wrap: wrap;
 }
 
-.about .box-container .box{
-    flex: 1 1 10rem;                    /*important*/
+.about .box-container .box {
+    flex: 1 1 10rem;
+    /*important*/
     display: flex;
     align-items: center;
     background-color: var(--white);
@@ -728,63 +754,125 @@ footer {
     gap: 1rem;
 }
 
-.about .box-container .box i{
+.about .box-container .box i {
     font-size: 1.5rem;
     color: var(--main-color);
 }
 
-.about .box-container .box span{
+.about .box-container .box span {
     font-size: 1rem;
     color: var(--light-color);
 }
 
-.candidate-list{
+.candidate-list {
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 1rem;
+    padding: 1rem 0;
 }
 
-.candidate-list h1{
-    font-size: 1.5rem;
+.candidate-section h1{
+    font-size: 2rem;
     color: var(--main-color);
     padding: 1rem;
-    padding-top: 2.5rem;
+    padding-top: 1rem;
 }
 
-.candidate{
+.candidate-section h3 {
+    font-size: 1rem;
+    color: var(--main-color);
+}
+
+.candidate p{
+    max-width: 17rem;
+    line-height: 1.5;
+    font-size: 1.2rem;
+}
+
+.candidate-section {
+    background-image: url(./image/whitebg.jpg);
+    padding: 1rem;
+    object-fit: contain;
+}
+
+.candidate {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 1rem;
+    justify-content: center;
     height: max-content;
+    gap: 1rem;
 }
 
+.candidate img{
+    border-radius: 50%;
+    height: 12rem;
+}
 
+.candidate h4{
+    font-size: 1.4rem;
+}
 
+.features {
+    background-color: var(--light-bg);
+    padding: 2rem 0;
+    display: flex;
+    justify-content: center;
+}
 
-
-
-@media (max-width:1200px){
-
-
-
+.features-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+    flex-direction: row;
+    padding: 2rem 0;
 
 }
 
+.features-box {
+    background: white;
+    border-radius: 1.5rem;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin: auto;
+    gap: 1rem;
+    padding: 1rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    color: var(--main-color);
+    justify-content: center;
+    transition: .2s linear;
+}
 
-@media (max-width:991px){
+.features-box:hover{
+    color: #007bff;;
+}
+
+.features-box img{
+    height: 10rem;
+    object-fit: contain;
+}
+
+@media (max-width:1200px) {}
+
+
+@media (max-width:991px) {
 
     .responsive {
         display: none;
-      }
-    
+    }
+
     .join-us-left {
         padding-left: 0;
     }
 }
 
 @media (max-width: 768px) {
-    
+
     .footer-row {
         flex-direction: column;
         align-items: center;
@@ -795,7 +883,4 @@ footer {
     }
 }
 
-@media (max-width: 450px) {
-
-    
-}
+@media (max-width: 450px) {}
