--- a/style.css
+++ b/style.css
@@ -1009,6 +1009,11 @@ body.show-chatbot .chatbot-toggler {
   color: #fff;
   position: absolute;
 }
+
+.chatbot-toggler span i{
+    font-size: 1.5rem;
+    color: var(--main-color);
+}
 .chatbot-toggler span:last-child,
 body.show-chatbot .chatbot-toggler span:first-child  {
   opacity: 0;
@@ -1044,7 +1049,7 @@ body.show-chatbot .chatbot {
   position: relative;
   text-align: center;
   color: #fff;
-  background: #724ae8;
+  background: var(--main-color);
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
 .chatbot header span {
@@ -1091,7 +1096,7 @@ header h2 {
   text-align: center;
   line-height: 32px;
   align-self: flex-end;
-  background: #724ae8;
+  background: var(--main-color);
   border-radius: 4px;
   margin: 0 10px 7px 0;
 }
@@ -1102,7 +1107,7 @@ header h2 {
   max-width: 75%;
   color: #fff;
   font-size: 0.95rem;
-  background: #724ae8;
+  background: var(--main-color);
 }
 .chatbox .incoming p {
   border-radius: 10px 10px 10px 0;
@@ -1120,14 +1125,16 @@ header h2 {
   gap: 5px;
   position: absolute;
   bottom: 0;
+  justify-content: flex-start;
   width: 100%;
+  align-items: center;
   background: #fff;
   padding: 3px 20px;
   border-top: 1px solid #ddd;
 }
 .chat-input textarea {
   height: 55px;
-  width: 100%;
+  width: 93%;
   border: none;
   outline: none;
   resize: none;
@@ -1137,7 +1144,7 @@ header h2 {
 }
 .chat-input span {
   align-self: flex-end;
-  color: #724ae8;
+  color: var(--main-color);
   cursor: pointer;
   height: 55px;
   display: flex;
@@ -1147,6 +1154,7 @@ header h2 {
 }
 .chat-input textarea:valid ~ span {
   visibility: visible;
+  display: flex;
 }
 
 @media (max-width: 490px) {
